--- a/app/templates/demo1.html
+++ b/app/templates/demo1.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h5>Demonstrate the select operation by retrive the details of all players whose jersy number is 7.</h5><br><br>
+<h5>1. Demonstrate the select operation by retrive the details of all players whose jersy number is 7.</h5><br><br>
 <table class="bodered">
     <thead>
     <tr>
