--- a/app/templates/demo10.html
+++ b/app/templates/demo10.html
@@ -9,13 +9,14 @@
 
 </head>
 <body>
-<h5>Retrieve the details of players whose team country is same as the palyer country group by country.</h5><br><br>
+<h5>10. Retrieve the details of players whose team country is same as the palyer country group by country.</h5><br><br>
 
 <table class="bodered">
     <thead>
     <tr>
+        <td>Team Name</td>
         <td>Player Name</td>
-		<td>Counrty</td>
+		<td>Country</td>
     </tr>
     </thead>
     <tbody>
