--- a/app/templates/demo2.html
+++ b/app/templates/demo2.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h5>Retrive the details of players whose age is between 20 and 30.</h5><br><br>
+<h5>2. Retrive the details of players whose age is between 20 and 30.</h5><br><br>
 
 <table class="bodered">
     <thead>
