--- a/app/templates/demo3.html
+++ b/app/templates/demo3.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h5>List the teams who have won in the stadium Stamford Bridge.</h5><br><br>
+<h5>3. List the teams who have won in the stadium Stamford Bridge.</h5><br><br>
 <table class="bodered">
     <thead>
     <tr>
