--- a/app/templates/demo5.html
+++ b/app/templates/demo5.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h5>Demonstrate the update operation by updating all the Player's Cost by 10% who have scored more than 6 goals.</h5><br><br>
+<h5>5 .Demonstrate the update operation by updating all the Player's Cost by 10% who have scored more than 6 goals.</h5><br><br>
 
 <table class="bodered">
     <thead>
