--- a/app/templates/demo7.html
+++ b/app/templates/demo7.html
@@ -9,7 +9,7 @@
 
 	</head>
 	<body>
-	<h5>Display the players according to the retirement age in ascending order</h5><br><br>
+	<h5>7. Display the players according to the retirement age in ascending order</h5><br><br>
 
 	<table class="bodered">
 		<thead>
