--- a/app/templates/demo8.html
+++ b/app/templates/demo8.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h5>Retrieve the team who lost more than 3 matches</h5><br><br>
+<h5>8. Retrieve the team who lost more than 3 matches</h5><br><br>
 
 <table class="bodered">
     <thead>
