--- a/app/templates/demo4.html
+++ b/app/templates/demo4.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h5>Calculate the Maximum, Minimum, Summation, Average of Player's Cost in the team Real Madrid</h5><br><br>
+<h5>4. Calculate the Maximum, Minimum, Summation, Average of Player's Cost in the team Real Madrid</h5><br><br>
 
 <table class="bodered">
     <thead>
